@@ -1,3 +1,7 @@
+1999-09-15  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Convert.pm: Tidy up documentation. 
+
 1999-09-14  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Print.pm (err): Allow beeping with orac_err
